# REVOL-E-TION

./: .dockerignore  .gitignore  .requirements.txt  DOE_table.csv  Dockerfile  LICENSE  MGEV_main.py  New_data.csv  New_data_24.csv  PV_gen.ipynb  README.md  ToDo.md  Wind_gen.ipynb  _requirements  additional_constraints.py  agr_car_data.csv  aprioripowerscheduler.py  ba_honeder.json  battery.py  battery_data_conversion.ipynb  blocks.py  commodities.py  commodity_des.py  custom_constraints.py  dem_load_profiles.py  doe_set.ipynb  economics.py  ensys_interface.py  epf.py  functions.py  global_optimum.py  ind_car_data.csv  input_documentation.md  main.py  mapper_timeframe.py  mobility.py  parameters.py  postprocessing.py  preprocessing.py  pv_generator.py  (+15 more)
CRS_BRS_SIM/: BRS_CRS_SIM.py  BRS_CRS_SIM.py.py  input.xlsx
RE stochastic gen/: readme.txt
aging_model/: Aging_Model.py  Electric_Model.py  ElectroThermalSingle.py  batteryElectricTruck.py  init_battery_data.py  main.py
analysis/: dummy.txt
data/: slp_bdew.csv
example/: bev_demand.csv  bev_usecases.csv  brs_demand.csv  brs_usecases.csv  fleet_example.csv  grid_emissions.csv  grid_markets.csv  grid_opex_g2s.csv  mapper_timeframe.py  mtf.py  pvgis_api_params.csv  scenarios_example.csv  scenarios_example_emissions.csv  settings.csv  solcast_api_params.csv
results/: dummy.txt
revoletion/: __init__.py  battery.py  blocks.py  blocks_legacy.py  checker.py  constraints.py  dispatch.py  economics.py  economics_classes.py  logger.py  main.py  mobility.py  prediction.py  scheduler.py  simulation.py  utils.py
(+2833 files in other folders)
