[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revoletion"
version = "1.1"
description = "Resilient Electric Vehicle Optimization model for Local Energy TransitION"
authors = [
    { name = "Philipp Rosner", email = "philipp.rosner@tum.de" },
    { name = "Brian Dietermann", email = "brian.dietermann@tum.de"}
]
dependencies = [
    "geopy",
    "graphviz",
    "gurobipy",
    "holidays",
    "numpy",
    "numpy_financial",
    "oemof.solph==0.6.0a2",
    "pandas==2.2.0",
    "plotly",
    "psutil",
    "pvlib",
    "pyomo==6.7.0",
    "pytz",
    "rainflow",
    "scipy",
    "simpy",
    "timezonefinder",
    "tk",
    "windpowerlib"
]

[tool.setuptools]
packages = ["revoletion"]

[project.scripts]
revoletion = "revoletion.main:main"